ace scrollbar service to apply on both ace editors auto complete + snippet ui fix - left bar

--- a/src/components/Engine/engine.scss
+++ b/src/components/Engine/engine.scss
@@ -9,3 +9,20 @@
         grid-template-columns: 10px 9fr 9fr;
     }
 }
+
+::-webkit-scrollbar {
+    width: 1em;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(100, 100, 100, 0.8);
+}
+
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-thumb:window-inactive {
+    background: #21252b;
+}
